WIP: Migrate yang-model-util to JUnit5
// FIXME: review

Change-Id: I762d9e7b124e0b07511b847ee594e9386cae1f4d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>